# cryptoquote

./: cryptoquote.cabal
app/: Assoc.hs  Main.hs
data/: quotations.enc  words.txt
